--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       justify-content: center;
       align-items: center;
       font-family: 'Segoe UI', sans-serif;
+      overflow: hidden;
     }
 
     .card {
@@ -21,8 +22,9 @@
       border-radius: 20px;
       text-align: center;
       box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-      max-width: 350px;
+      max-width: 360px;
       position: relative;
+      z-index: 2;
     }
 
     h1 {
@@ -32,7 +34,16 @@
 
     p {
       color: #555;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
+    }
+
+    input {
+      padding: 10px;
+      width: 80%;
+      border-radius: 10px;
+      border: 1px solid #ddd;
+      margin-bottom: 15px;
+      text-align: center;
     }
 
     button {
@@ -40,3 +51,124 @@
       color: white;
       border: none;
       padding: 12px 25px;
+      border-radius: 30px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #ff2f70;
+      transform: scale(1.05);
+    }
+
+    #message {
+      margin-top: 20px;
+      color: #ff4d88;
+      font-weight: bold;
+      min-height: 120px;
+    }
+
+    .heart {
+      position: absolute;
+      color: #ff4d88;
+      animation: float 3s linear forwards;
+      opacity: 0.8;
+      z-index: 1;
+    }
+
+    @keyframes float {
+      from {
+        transform: translateY(0);
+        opacity: 1;
+      }
+      to {
+        transform: translateY(-120px);
+        opacity: 0;
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="card">
+    <h1>💘 Happy Valentine 💘</h1>
+    <p>Masukin nama kamu dulu ya 👀</p>
+
+    <input type="text" id="nameInput" placeholder="Nama kamu…" />
+
+    <br>
+    <button onclick="startMessage()">Start 💖</button>
+
+    <div id="message"></div>
+  </div>
+
+  <script>
+    const jokes = [
+      "Hai, {name} 👋",
+      "Aku udah coba nge-debug perasaan ini…",
+      "tapi error-nya muncul terus: ❤️ undefined ❤️",
+      "Setiap mikirin kamu, logika aku masuk infinite loop 🔁",
+      "Kalau cinta itu algoritma, kamu variabel yang ga pernah aku reset.",
+      "Dan kalau kamu bug…",
+      "jujur aja, aku ga pengen fix kamu 🥺💘",
+      "— made with HTML, CSS, JavaScript & feelings 💻❤️"
+    ];
+
+    let jokeIndex = 0;
+    let charIndex = 0;
+
+    function startMessage() {
+      const name = document.getElementById("nameInput").value || "kamu";
+      document.getElementById("message").innerHTML = "";
+      jokeIndex = 0;
+      charIndex = 0;
+
+      jokes.forEach((_, i) => {
+        jokes[i] = jokes[i].replace("{name}", name);
+      });
+
+      typeText();
+      spawnHearts();
+    }
+
+    function typeText() {
+      const messageBox = document.getElementById("message");
+
+      if (jokeIndex < jokes.length) {
+        if (charIndex < jokes[jokeIndex].length) {
+          messageBox.innerHTML += jokes[jokeIndex].charAt(charIndex);
+          charIndex++;
+          setTimeout(typeText, 50);
+        } else {
+          messageBox.innerHTML += "<br><br>";
+          jokeIndex++;
+          charIndex = 0;
+          setTimeout(typeText, 600);
+        }
+      }
+    }
+
+    function spawnHearts() {
+      for (let i = 0; i < 20; i++) {
+        setTimeout(createHeart, i * 150);
+      }
+    }
+
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.innerHTML = "❤️";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.top = "80vh";
+      heart.style.fontSize = Math.random() * 20 + 15 + "px";
+
+      document.body.appendChild(heart);
+
+      setTimeout(() => heart.remove(), 3000);
+    }
+  </script>
+
+</body>
+</html>
