--- a/index.html
+++ b/index.html
@@ -1,173 +1,205 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Valentine 💕</title>
+  <title>Untuk Ayah 🤍</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #ffd6e8, #fff1f7);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    * {
+      box-sizing: border-box;
       font-family: 'Segoe UI', sans-serif;
-      overflow: hidden;
     }
 
-    .card {
-      background: white;
-      padding: 40px;
-      border-radius: 20px;
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(180deg, #e6e6e6, #f5f5f5);
+      color: #2f2f2f;
       text-align: center;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-      max-width: 360px;
-      position: relative;
-      z-index: 2;
+      overflow-x: hidden;
     }
 
     h1 {
-      color: #ff4d88;
-      margin-bottom: 10px;
-    }
-
-    p {
-      color: #555;
-      margin-bottom: 20px;
-    }
-
-    input {
-      padding: 10px;
-      width: 80%;
-      border-radius: 10px;
-      border: 1px solid #ddd;
-      margin-bottom: 15px;
-      text-align: center;
+      font-size: 26px;
+      margin-top: 80px;
+      font-weight: 500;
     }
 
     button {
-      background: #ff4d88;
-      color: white;
+      margin: 15px;
+      padding: 12px 22px;
       border: none;
-      padding: 12px 25px;
-      border-radius: 30px;
+      border-radius: 25px;
+      background-color: #5f6f52;
+      color: white;
+      font-size: 14px;
       cursor: pointer;
-      font-size: 16px;
       transition: 0.3s;
     }
 
     button:hover {
-      background: #ff2f70;
-      transform: scale(1.05);
+      background-color: #4a5841;
     }
 
-    #message {
-      margin-top: 20px;
-      color: #ff4d88;
-      font-weight: bold;
-      min-height: 120px;
+    .container {
+      padding: 30px 15px 80px;
     }
 
-    .heart {
-      position: absolute;
-      color: #ff4d88;
-      animation: float 3s linear forwards;
-      opacity: 0.8;
-      z-index: 1;
+    .card {
+      background: #ffffff;
+      padding: 20px;
+      margin: 20px auto;
+      border-radius: 15px;
+      max-width: 320px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+      animation: fadeUp 0.6s ease;
     }
 
-    @keyframes float {
+    .photo-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 15px;
+      margin-top: 25px;
+    }
+
+    .photo-card {
+      background: #ffffff;
+      border-radius: 15px;
+      padding: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      animation: fadeUp 0.6s ease;
+    }
+
+    .photo-card img {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .photo-card p {
+      font-size: 12px;
+      margin-top: 8px;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    @keyframes fadeUp {
       from {
-        transform: translateY(0);
-        opacity: 1;
+        opacity: 0;
+        transform: translateY(15px);
       }
       to {
-        transform: translateY(-120px);
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* LOVE FLOATING */
+    .love {
+      position: fixed;
+      bottom: -10px;
+      font-size: 16px;
+      color: #c26b6b;
+      animation: floatUp 6s linear infinite;
+      opacity: 0.6;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(0) translateX(0);
+        opacity: 0.6;
+      }
+      100% {
+        transform: translateY(-110vh) translateX(30px);
         opacity: 0;
       }
     }
   </style>
 </head>
-
 <body>
 
-  <div class="card">
-    <h1>💘 Happy Valentine 💘</h1>
-    <p>Masukin nama kamu dulu ya 👀</p>
+  <h1>halo ini anakmu lagi iseng pengen bikin website</h1>
 
-    <input type="text" id="nameInput" placeholder="Nama kamu…" />
+  <div class="container">
+    <button onclick="showSyukur()">klik dulu deh</button>
 
-    <br>
-    <button onclick="startMessage()">Start 💖</button>
+    <div id="syukur" class="card hidden">
+      aku bersyukur punya ayah yang selalu ada,  
+      yang mungkin jarang bilang capek,  
+      tapi selalu ngajarin aku kuat 🤍
+    </div>
 
-    <div id="message"></div>
+    <button onclick="showPhotos()">klik lagi</button>
+
+    <div id="photos" class="photo-grid hidden">
+      <div class="photo-card">
+        <img src="foto1.jpg">
+        <p>ayah versi paling sabar</p>
+      </div>
+      <div class="photo-card">
+        <img src="foto2.jpg">
+        <p>ayah yang selalu mikirin keluarga</p>
+      </div>
+      <div class="photo-card">
+        <img src="foto3.jpg">
+        <p>ayah yang kerjanya gak kenal capek</p>
+      </div>
+      <div class="photo-card">
+        <img src="foto4.jpg">
+        <p>ayah dengan senyum paling tenang</p>
+      </div>
+      <div class="photo-card">
+        <img src="foto5.jpg">
+        <p>ayah, rumah paling aman</p>
+      </div>
+      <div class="photo-card">
+        <img src="foto6.jpg">
+        <p>ayah, panutan seumur hidup</p>
+      </div>
+    </div>
+
+    <button onclick="showDoa()">terakhir 🤍</button>
+
+    <div id="doa" class="card hidden">
+      aku gak banyak minta,  
+      semoga ayah selalu sehat,  
+      dipanjangkan umur,  
+      dikuatkan langkahnya,  
+      dan selalu dikelilingi hal-hal baik.  
+      terima kasih sudah jadi ayah terbaik versiku 🤍
+    </div>
   </div>
 
   <script>
-    const jokes = [
-      "Hai, {name} 👋",
-      "Aku udah coba nge-debug perasaan ini…",
-      "tapi error-nya muncul terus: ❤️ undefined ❤️",
-      "Setiap mikirin kamu, logika aku masuk infinite loop 🔁",
-      "Kalau cinta itu algoritma, kamu variabel yang ga pernah aku reset.",
-      "Dan kalau kamu bug…",
-      "jujur aja, aku ga pengen fix kamu 🥺💘",
-      "— made with HTML, CSS, JavaScript & feelings 💻❤️"
-    ];
-
-    let jokeIndex = 0;
-    let charIndex = 0;
-
-    function startMessage() {
-      const name = document.getElementById("nameInput").value || "kamu";
-      document.getElementById("message").innerHTML = "";
-      jokeIndex = 0;
-      charIndex = 0;
-
-      jokes.forEach((_, i) => {
-        jokes[i] = jokes[i].replace("{name}", name);
-      });
-
-      typeText();
-      spawnHearts();
+    function showSyukur() {
+      document.getElementById('syukur').classList.remove('hidden');
     }
 
-    function typeText() {
-      const messageBox = document.getElementById("message");
-
-      if (jokeIndex < jokes.length) {
-        if (charIndex < jokes[jokeIndex].length) {
-          messageBox.innerHTML += jokes[jokeIndex].charAt(charIndex);
-          charIndex++;
-          setTimeout(typeText, 50);
-        } else {
-          messageBox.innerHTML += "<br><br>";
-          jokeIndex++;
-          charIndex = 0;
-          setTimeout(typeText, 600);
-        }
-      }
+    function showPhotos() {
+      document.getElementById('photos').classList.remove('hidden');
     }
 
-    function spawnHearts() {
-      for (let i = 0; i < 20; i++) {
-        setTimeout(createHeart, i * 150);
-      }
+    function showDoa() {
+      document.getElementById('doa').classList.remove('hidden');
     }
 
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.innerHTML = "❤️";
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.top = "80vh";
-      heart.style.fontSize = Math.random() * 20 + 15 + "px";
+    // LOVE ANIMATION
+    setInterval(() => {
+      const love = document.createElement('div');
+      love.className = 'love';
+      love.innerHTML = '❤';
+      love.style.left = Math.random() * 100 + 'vw';
+      love.style.animationDuration = (4 + Math.random() * 3) + 's';
+      document.body.appendChild(love);
 
-      document.body.appendChild(heart);
-
-      setTimeout(() => heart.remove(), 3000);
-    }
+      setTimeout(() => {
+        love.remove();
+      }, 6000);
+    }, 800);
   </script>
 
 </body>
