Update text content in index.html

--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
 </head>
 <body>
 
-  <h1>halo ini anakmu lagi iseng pengen bikin website</h1>
+  <h1>HALLO BABAAA!! INI ANAKNYA LAGI GABUT TAPI NIAT, HEHE..</h1>
 
   <div class="container">
-    <button onclick="showSyukur()">klik dulu deh</button>
+    <button onclick="showSyukur()">Klik ini dulu</button>
 
     <div id="syukur" class="card hidden">
-      aku bersyukur punya ayah yang selalu ada,  
-      yang mungkin jarang bilang capek,  
-      tapi selalu ngajarin aku kuat 🤍
+      Nadin bersyukur punya baba,  
+      yang selalu dukung anak-anaknya,  
+      jarang ngobrol tapi sayangnya selalu terasa 🤍
     </div>
 
     <button onclick="showPhotos()">klik lagi</button>
@@ -165,12 +165,12 @@
     <button onclick="showDoa()">terakhir 🤍</button>
 
     <div id="doa" class="card hidden">
-      aku gak banyak minta,  
-      semoga ayah selalu sehat,  
+      Nadin banyak minta ke Allah,  
+      supaya baba selalu sehat,  
       dipanjangkan umur,  
       dikuatkan langkahnya,  
       dan selalu dikelilingi hal-hal baik.  
-      terima kasih sudah jadi ayah terbaik versiku 🤍
+      Makasih udah jadi babanya Nadin 🤍
     </div>
   </div>
 
