--- a/index.html
+++ b/index.html
@@ -138,27 +138,27 @@
     <div id="photos" class="photo-grid hidden">
       <div class="photo-card">
         <img src="images/foto1.jpg">
-        <p>ayah versi paling sabar</p>
+        <p>Baba versi paling random</p>
       </div>
       <div class="photo-card">
         <img src="images/foto2.jpg">
-        <p>ayah yang selalu mikirin keluarga</p>
+        <p>Baba yang selalu co cweet ke Ummi</p>
       </div>
       <div class="photo-card">
         <img src="images/foto3.jpg">
-        <p>ayah yang kerjanya gak kenal capek</p>
+        <p>Baba yang kerenn</p>
       </div>
       <div class="photo-card">
         <img src="images/foto4.jpg">
-        <p>ayah dengan senyum paling tenang</p>
+        <p>Baba dengan senyum paling tenang</p>
       </div>
       <div class="photo-card">
         <img src="images/foto5.jpg">
-        <p>ayah, rumah paling aman</p>
+        <p>Baba, dan rumah paling aman</p>
       </div>
       <div class="photo-card">
         <img src="images/foto6.jpg">
-        <p>ayah, panutan seumur hidup</p>
+        <p>Baba, lop yuu</p>
       </div>
     </div>
 
